# platform.core.system.libstorage

./: CMakeLists.txt  LICENSE  storage.pc.in
doc/: storage_doc.h
include/: common.h  list.h  log.h  storage-expand.h  storage-internal.h  storage.h
packaging/: libstorage.spec
src/: statvfs.c  storage-external-dbus.c  storage-external-dbus.h  storage-external-inhouse.c  storage-external-notsupported.c  storage-external.c  storage-external.h  storage-internal.c  storage-sdcard.c  storage.c
